--- a/src/Vista/RegistroPedido.form
+++ b/src/Vista/RegistroPedido.form
@@ -240,7 +240,7 @@
               <ComponentRef name="combocliente"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Por defecto"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
